# 5dc_ml

./: .gitignore  CMakeLists.txt  README.md  emmodule.cpp  pymodule.cpp  requirements.txt  run_test.bat  test_api.py  test_pgn_parse.py
.github/: copilot-instructions.md
alphazero/: __init__.py  analyze_commutability.py  benchmark_selfplay.py  config.py  diagnose_cpp_onnx.py  env.py  export_onnx.py  mcts.py  network.py  profile_selfplay_pipeline.py  self_play.py  smoke_test.py  train.py  variants.py
docs/: alphazero-deployment.md  build-pymodule.md  build-wasm.md
ml/: __init__.py  ai_server.py  config.py  self_play.py  smoke_test.py  test_ai_server.py  test_api.py  test_training_fix.py  test_transfer.py  train.py  trainer.py
ml/models/: __init__.py  agent.py  board_encoder.py  multiverse_encoder.py  policy_head.py  value_head.py
src/core/: game.cpp  game.h  multiverse_base.cpp  multiverse_base.h  state.cpp  state.h
src/tools/: az_selfplay_onnx.cpp
ui/: index.html
ui/scripts/: main.js  ui.js  worker.js
ui/styles/: popup.css
ui/wasm/: engine.js  engine.wasm
